--- a/VRChat/50/1367450.html
+++ b/VRChat/50/1367450.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DGQcIMqCEHICQxs6DmnE9uIwtTOs0DLDK5O4ikxsji4="></script>
+    "9Af+Ze0v0rbnhoV5OcV5iXUXdcHxiFjpvnSksmVi5XE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]3Dモデル「RAYKA」オリジナル","description":"オリジナル3Dモデルキャラクター「RAYKA（ライカ）」\nポリゴン数△:4448\nマテリアル:1\nテクスチャ:1\nファイル形式:fbx,VRM VRC対応Unitypackage\nシェイプキー：アイウエオ、笑顔、ジト目、おどろき\n\nOculusQuest対応の5000未満のポリゴン数です！\nシェーダーは導入してないのでお好みのシェーダーを導入してください。\nOculusQuestの場合はシェーダーに制限があるのでご注意ください。\n\nVRchat導入の際はUnityのプロジェクトにVRchatのSDKを導入した状態でRAYKAのパッケージをインポートしてください。\nFBXからの導入ももちろん可能です。\n\n\n・収益化動画等の撮影、映り込み ・モデル改変可能 \n商用可能ですが著作権を譲渡はいたしませんのでご了承ください。\n再配布、転売、公序良俗に反する行為、その他碧守キャベツに不利益になる行為に使用することはご遠慮ください\n","url":"https://booth.pm/ja/items/1367450","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5ab2513b-2360-4475-bb48-29cce99ec2cc/i/1367450/88bd9793-78db-4f87-b766-936277b1e167_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DGQcIMqCEHICQxs6DmnE9uIwtTOs0DLDK5O4ikxsji4="></script>
+    nonce="9Af+Ze0v0rbnhoV5OcV5iXUXdcHxiFjpvnSksmVi5XE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1367450/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1367450/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
