--- a/VRChat/54/1314954.html
+++ b/VRChat/54/1314954.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BiMAsW5xk2i/3TxdnJI79zYERKcFoV0eZZxzKgbbUVc="></script>
+    "uJoQVXHPJ9LvfN6LfImDYJnd8fMwYAN10AuxcbJtiXI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】リバーシブル枕【無料配布】","description":"◆概要\n\n△192ポリゴン\n\nYES/NO枕のモデルです。\n\n\nVR睡眠時に、パートナーがいるアナタに。\n\nテクスチャを変えれば普通の枕にもできます。\n\nお好きなようにお使いください。\n\n\n◆ファイル内容\n\n枕.blend  \n枕.fbx \ntexture - デフォルトテクスチャが入ってます。改変するときはバックアップ推奨。\nuv - UVマップが入ってます。テクスチャを貼るときに使ってください。\n\n\n◆利用規約\n\n本モデルの著作権はNekonohaに帰属します。\n本モデルは商用・配信等に利用することができます。\n特定個人や団体等、他人を不快にさせる用途・目的等での使用はご遠慮ください。\n本モデルの改変・改造は自由です。\n改変・改造の有無に関わらず、本モデルデータの再配布及び再販売を禁止します。\n\n\n◆制作者\n\nネコノハヤシロ\n\n◆連絡先\n\nTwitter: @tan_fantazma\nDiscord: Nekonoha#9701","url":"https://booth.pm/ja/items/1314954","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1314954/9526f127-5dce-47c9-a478-d577280d7633_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BiMAsW5xk2i/3TxdnJI79zYERKcFoV0eZZxzKgbbUVc="></script>
+    nonce="uJoQVXHPJ9LvfN6LfImDYJnd8fMwYAN10AuxcbJtiXI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1314954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1314954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
