--- a/VRChat/46/1314546.html
+++ b/VRChat/46/1314546.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+r/Ody9vu9/tg6Ds26rNB1GR8rVPRLSenfbg2xgJL48="></script>
+    "1Ijw47IYS5oqh7DCMuGD8nOVnjEAxt/15tQs8N3zas8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アングラの子ver1.0~2.0","description":"VRChatでの利用を想定したキャラクターモデル、アングラの子です。\n\nSDK2_Onry Not for SDK3 \n\nサポート終了している作品です。\nSDK3で利用する場合は自身でセットアップする必要が有ります。地震でセットアップが可能な方のみのご購入をお願いします。\n\nVRCへのアップロードまでの参考に https://drive.google.com/open?id=1fFxBUrEoQtWueY5FsYkh7P76TllSTBvR\n―――――――――――――――――――――――――\n・\\5000　：ローポリ版\n約4000ポリゴン版のモデルです。OqurusQuest対応\n\n・\\8000　：ハイポリ版\n約40000ポリゴン版のモデルです。\nVer1.3、Ver1.5、Ver2.0がダウンロード可能です。\n\n・\\12000 ：クロスグレード版\n両方のモデルがダウンロード可能です。\n\n―― アップデート　ローポリ版 ――――――――――\n----：1.0.2：テクスチャ一部修正\n----：1.0.3：テクスチャ修正\n6/24：1.0.4：明るい髪用のベーステクスチャ追加\n\n―― アップデート　ハイポリ版 ――――――――――\n\n・6/16：1.0.4:プロポーションの変更、一部シェイプキーの修正、髪の毛をMatCapからテクスチャに変更、ダボTバージョンを追加。顔の微調整\n・6/16：1.0.5β:プロポーション、ボーン設定の微調整\n・6/25：プロポーションの微調整、ボーン構成の一部変更、胸の調整\n・7/23:肌マテリアルの一部が別のマテリアルになっていた箇所の修正\n・8/10:アニメーションが合わさった際に破綻してしまうアニメーションの修正。\n・10/6:V.2.0アップデート大部分のテクスチャを描き直しました。ボディーを作り直しました。顔を若干修正しました。Blender2.8でも通常通りに編集可能に成りました。ローポリ版の際に構想していたイメージに寄り近づけたモデルになっています。\n・10/22:アングラの子2.0.1：角のシェイプキーが壊れていたので修正しました。地の髪のアウトラインが大幅にずれていたのでアウトラインを削除しました。\n・アップグレード予定、胸にポリゴン追加、胸の大きさ上限アップ\n\n―――――――――――――――――――――――――\n\nUnityがある程度利用できる事、GIMP、クリスタ等のペイントソフトがある程度使える事が前提に成っています。購入後の返金対応は出来ませんのでご注意ください。","url":"https://booth.pm/ja/items/1314546","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"4500","highPrice":"12000"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1314546/f591ade5-84fc-4918-8b90-f890cbfcef5d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+r/Ody9vu9/tg6Ds26rNB1GR8rVPRLSenfbg2xgJL48="></script>
+    nonce="1Ijw47IYS5oqh7DCMuGD8nOVnjEAxt/15tQs8N3zas8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1314546/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1865
+                              1864
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1314546/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1865
+                              1864
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
