--- a/VRChat/93/1313993.html
+++ b/VRChat/93/1313993.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xwkEondUp86jqwrZSd3kXeH9VpxMetzo3RG0pyd4Py8="></script>
+    "Bs+E4IVYH8/fawjo4yTi4kmK52OxIHT2HDXBvnl/49s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"玉虫色の槍","description":"VRC向けの武器となります\n\nクトゥルフ神話に登場する邪神の一体\nヨグソトースをイメージした槍です\n\n\n■ポリゴン数【1506】\n\n【利用規約】\n\n■改変・商用利用・私的利用可\n\n■禁止事項：再配布、自作発言を禁止します","url":"https://booth.pm/ja/items/1313993","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/87f470db-be75-4a7d-bf09-8de00a4cf91c/i/1313993/485dbf4a-b331-4be9-a51a-bb18b7ad7838_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xwkEondUp86jqwrZSd3kXeH9VpxMetzo3RG0pyd4Py8="></script>
+    nonce="Bs+E4IVYH8/fawjo4yTi4kmK52OxIHT2HDXBvnl/49s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1313993/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1313993/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
