--- a/VRChat/21/1311821.html
+++ b/VRChat/21/1311821.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rD9MvJDgwKHgR6BRFUIVlU20izwmhH8nkTKjzM+i4Aw="></script>
+    "jbPwzWK7Ivt07fq7bHHRysINb/Rs8Ew/AfJzRRCELi8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRoid用衣装テクスチャ】ふしぎな国のワンピース","description":"VRoid用のワンピーステクスチャです。\nワンピース、ニーソックス、リボン用のテクスチャと\nおまけ程度ですがリボンつきローファーを同梱しております。\n・ご支援版には色違いワンピース各種（黒・赤・緑）、ソックス2種を同梱\n・赤/緑版はワンピース単体テクスチャのみとなります\n\nVRoid Hub 着用モデル\nふしぎな国のワンピース\nhttps://hub.vroid.com/characters/5023144384918621263/models/6256103826272232424\nふしぎな国のワンピース（黒）\nhttps://hub.vroid.com/characters/5023144384918621263/models/5690056751945092091\n\nモデル衣装設定\n・袖の広がり…38\n・袖の絞り…100\n・スカートの広がり…26\n異なる設定でもお楽しみいただけます。\n袖の広がりはMAXでも可愛いです。\n\n・アップデートのお知らせ\n遅くなりましたが、「ご支援版」においてご要望いただきました\n「靴下部分以外を透過して別のスキンと合わせることができるもの」\nを追加致しました。よろしければ「ご支援版v2→○○_靴下のみ」データをご活用ください。\n\n・データ改変…可\n・動画配信（商用を含む）やVRCHATでの使用…可\n・再配布…不可　改変したものを含む","url":"https://booth.pm/ja/items/1311821","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"350","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/4406079a-4509-4860-9645-53e9a6ea2ca6/i/1311821/39408f67-59c3-42c7-96e1-06f98ae4bb68_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rD9MvJDgwKHgR6BRFUIVlU20izwmhH8nkTKjzM+i4Aw="></script>
+    nonce="jbPwzWK7Ivt07fq7bHHRysINb/Rs8Ew/AfJzRRCELi8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1311821/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1311821/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
