--- a/VRChat/27/1311727.html
+++ b/VRChat/27/1311727.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wsyDXrSDdpgIzxn55kBTmfbH2ulp7jStAqFNyYEkpgs="></script>
+    "P73toZJh1kHYEsr1bOQTUhVNXUCXmCTnLZtuqgXnUx0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定アクセサリ くろにゃーん","description":"にゃーんです\n手足は動かないけどダイナミックボーンがあれば\n動きに合わせてぐにゃぐにゃするよ\n頭に乗せてあそびましょ～\nちょっと工夫すればアバターにもできるはず\n","url":"https://booth.pm/ja/items/1311727","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1311727/47ff9372-4df4-4e5e-9ef7-d3d63ffff7dd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wsyDXrSDdpgIzxn55kBTmfbH2ulp7jStAqFNyYEkpgs="></script>
+    nonce="P73toZJh1kHYEsr1bOQTUhVNXUCXmCTnLZtuqgXnUx0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1311727/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1311727/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
