--- a/VRChat/78/1310378.html
+++ b/VRChat/78/1310378.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zcLdDo9GGiuKZpPX3HN54EEmtzfrtAF6B5MCQT7bsl0="></script>
+    "T+n8t/7z/IphTGSA1qyT13ybzOoyxvhFNY/ZT+BEkS4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ピックアップお片付けボタンprefab ","description":"2021/08/13：Unity2019(SDK2)で動くことを確認\n2020/09/14：位置をリセットできない場合の補足を追記\n2020/04/21：Unity2018(VRCSDK2)で使えることを確認\n\nピックアップをつけたオブジェクトが遊んでいるうちにちらかっちゃって片付けるのが大変……\nそんなときにワールドに組み込むことで初期位置に戻す事ができるボタンのセットです\n\nVRCHATでのworld(SDK2)で使うことを想定しています\nワールド制作がちょっとでもわかる人向け\n\n改変や改変しての再配布等自由ですが\nひとに迷惑がかかる使い方はやめてね","url":"https://booth.pm/ja/items/1310378","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/0140b1d9-1e9d-4ac5-82b2-80cb66005de0/i/1310378/90428f5b-5703-41ea-949c-c4255e8fb448_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zcLdDo9GGiuKZpPX3HN54EEmtzfrtAF6B5MCQT7bsl0="></script>
+    nonce="T+n8t/7z/IphTGSA1qyT13ybzOoyxvhFNY/ZT+BEkS4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1310378/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1310378/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
